--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "expo": "~47.0.0",
+    "expo-font": "~11.0.1",
+    "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.4",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
