--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.4",
     "react": "18.1.0",
-    "react-native": "0.70.8"
+    "react-native": "0.70.8",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
