--- a/package.json
+++ b/package.json
@@ -23,17 +23,18 @@
     "expo-media-library": "~15.0.0",
     "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.15.6",
     "firebase": "^9.19.1",
     "react": "18.1.0",
     "react-native": "0.70.8",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-maps": "^1.3.2",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-redux": "^8.0.5",
-    "expo-updates": "~0.15.6"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
