--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^9.19.1",
     "react": "18.1.0",
     "react-native": "0.70.8",
+    "react-native-flash-message": "^0.4.1",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-maps": "^1.3.2",
